--- a/src/Kooco.Pikachu.Blazor/Pages/TenantBillingReports/TenantBillingReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantBillingReports/TenantBillingReport.razor
@@ -42,7 +42,7 @@
                                 Caption="@L["GroupBuyName"]"
                                 Width="50%">
                     <DisplayTemplate>
-                        <a href="@StoreUrl/@context.GroupBuyId" target="_blank">@context.GroupBuyName</a>
+                        <a href="/TenantBillingReport/TenantBillingReportDetails/@context.GroupBuyId" target="_blank">@context.GroupBuyName</a>
                     </DisplayTemplate>
                 </DataGridColumn>
                 <DataGridColumn Caption="@L["ReportUrl"]" Sortable="false" TextAlignment="TextAlignment.Center">
