--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -324,16 +324,16 @@
                     } *@
                      @if (Order.OrderType != OrderType.MargeToNew)
                     {
-                        @if (Order.PaymentMethod == PaymentMethods.CreditCard && Order.IsRefunded == false)
+                        @if (Order.ShippingStatus != ShippingStatus.WaitingForPayment && Order.IsRefunded == false)
                         {
-                            <Button Type="ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="ApplyRefund">
+                            <Button Type="ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="OpenRefundModal">
                                 @L["ApplyRefund"]
                             </Button>
                         }
                         else
                         {
-                            <Button Type="ButtonType.Button"       
-                                Disabled Class="btn btn-sm btn-danger" Clicked="ApplyRefund">
+                            <Button Type="ButtonType.Button"
+                                    Disabled Class="btn btn-sm btn-danger" Clicked="OpenRefundModal">
                                  @L["ApplyRefund"]
                             </Button>
                         }
@@ -544,7 +544,7 @@
                                 {
                                     <tr>
                                         <td>
-                                            <InputCheckbox class="form-check-input" @bind-Value="item.IsSelected" />
+                                            <InputCheckbox  class="form-check-input" @bind-Value="item.IsSelected" />
                                         </td>
                                         <td class="text-start" style="width: 50%;">
                                             @if (item.ItemType == ItemType.Item)
@@ -995,6 +995,196 @@
                 <ModalFooter>
                     <Button Color="Color.Secondary"
                             Clicked="CloseShipmentModal">
+                        @L["Cancel"]
+                    </Button>
+                    <Button Type="ButtonType.Submit" Class="btn btn-primary">
+                        <i class="fa fa-check"></i>
+                        @L["Save"]
+                    </Button>
+                </ModalFooter>
+            </EditForm>
+        </ModalContent>
+    </Modal>
+
+     <Modal @ref="RefundModal">
+        <ModalBackdrop />
+        <ModalContent IsCentered="true" Size="ModalSize.Large">
+            <EditForm Model="@refunds" OnValidSubmit="ApplyRefundAsync">
+                <ModalHeader>
+                    <ModalTitle>@L["Refund"]</ModalTitle>
+                        <CloseButton Clicked="CloseRefundModal" onv />
+                    </ModalHeader>
+                    <ModalBody>
+
+                        <DataAnnotationsValidator />
+                        <div class="row my-2">
+                            <label class="form-label">@L["RefundWholeOrder"]</label>
+                        <div class="col-12">
+                            <input type="checkbox" class="form-check-input" checked="@refunds.IsRefundOrder" @onchange="() => UpdateCheckState(1)" />
+                        </div>
+                    </div>
+                    <div class="row my-2">
+                        <label class="form-label">@L["SelectItemForRefund"]</label>
+                        <div class="col-12 mb-2">
+                            <input type="checkbox" class="form-check-input" checked="@refunds.IsRefundItems" @onchange="() => UpdateCheckState(2)" />
+                          
+                        </div>
+                    </div>
+                    @if(refunds.IsRefundItems)
+                    {
+                    <div class="row my-2">
+                      
+            <Card>
+                <CardBody>
+                    <table class="table table-responsive table-striped text-center">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th></th>
+                                <th>@L["Quantity"]</th>
+                                <th>@L["UnitPrice"]</th>
+                                <th>@L["Subtotal"]</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @if (Order != null && Order.OrderItems != null)
+                            {
+                                @foreach (var item in Order.OrderItems)
+                                {
+                                    <tr>
+                                        <td>
+                                            <InputCheckbox  class="form-check-input" @bind-Value="item.IsSelected" />
+                                        </td>
+                                        <td class="text-start" style="width: 50%;">
+                                            @if (item.ItemType == ItemType.Item)
+                                            {
+                                                var firstImage = item.Item?.Images?.FirstOrDefault()?.ImageUrl;
+                                                @if (!string.IsNullOrEmpty(firstImage))
+                                                {
+                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                }
+                                                @item.Item?.ItemName
+                                            }
+
+                                            @if (item.ItemType == ItemType.SetItem)
+                                            {
+                                                var firstImage = item.SetItem?.Images?.FirstOrDefault()?.ImageUrl;
+                                                @if (!string.IsNullOrEmpty(firstImage))
+                                                {
+                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                }
+                                                @item.SetItem?.SetItemName
+                                            }
+
+                                            @if (item.ItemType == ItemType.Freebie)
+                                            {
+                                                var firstImage = item.Freebie?.Images?.FirstOrDefault()?.ImageUrl;
+                                                @if (!string.IsNullOrEmpty(firstImage))
+                                                {
+                                                    <img src="@firstImage" class="img-fluid me-2" style="height: 50px; width: auto;" />
+                                                }
+                                                @item.Freebie?.ItemName
+                                            }
+
+                                        </td>
+                                        @if (item.IsSelected && IsItemsEditMode)
+                                        {
+                                            var thisItem = EditingItems.FirstOrDefault(e => e.Id == item.Id);
+                                            @if (thisItem != null)
+                                            {
+                                                <td>
+                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsQuantiyError ? "invalid" : "")" @bind-value="thisItem.Quantity" @onblur="() => CalculateTotal(thisItem)" />
+                                                </td>
+                                                <td>
+                                                    <input type="number" min="1" class="form-control form-control-sm @(thisItem.IsItemPriceError ? "invalid" : "")" @bind-value="thisItem.ItemPrice" @onblur="() => CalculateTotal(thisItem)" />
+                                                </td>
+                                                <td>
+                                                    $@thisItem.TotalAmount.ToString("N2")
+                                                </td>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <td>
+                                                @item.Quantity
+                                            </td>
+                                            <td>
+                                                <span>$@item.ItemPrice.ToString("N2")</span>
+                                            </td>
+                                            <td>
+                                                $@item.TotalAmount.ToString("N2")
+                                            </td>
+                                        }
+                                    </tr>
+                                }
+                                <tr>
+                                    <td colspan="2" class="text-end">
+                                        @L["Subtotal"]
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        $@Order.OrderItems.Sum(x=>x.TotalAmount).ToString("N2")
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2" class="text-end">
+                                        @L["DeliveryFee"]
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                       $@((Order.TotalAmount-Order.OrderItems.Sum(x=>x.TotalAmount)).ToString("N2"))
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2" class="text-end">
+                                        @L["Total"]
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        $@Order.TotalAmount.ToString("N2")
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </CardBody>
+            </Card>
+         
+                    
+                    </div>
+                    }
+                    <div class="row my-2">
+                        <label class="form-label">@L["RefundAmount"]</label>
+                        <div class="col-12 mb-2">
+                            <input type="checkbox" class="form-check-input"checked="@refunds.IsRefundAmount" @onchange="() => UpdateCheckState(3)" />
+                           
+                        </div>
+                    </div>
+                      @if (refunds.IsRefundAmount)
+                    {
+                        <div class="row my-2">
+                            <label class="form-label">@L["RefundAmount"]</label>
+                        <div class="col-12 mb-2">
+                           
+                          
+                                <InputNumber class="form-control"  @bind-Value="@refunds.Amount" />
+                            
+                        </div>
+                    </div>
+                    }
+                </ModalBody>
+                <ModalFooter>
+                    <Button Color="Color.Secondary"
+                            Clicked="CloseRefundModal">
                         @L["Cancel"]
                     </Button>
                     <Button Type="ButtonType.Submit" Class="btn btn-primary">
