--- a/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
@@ -16,7 +16,7 @@
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
     <div class="row">
         <div class="col-3">
-            <h3>@L["金流對帳表"]</h3>
+            <h3>@L["作廢/折讓票據"]</h3>
         </div>
         <div class="col-9 text-lg-end">
             <div class="d-inline-block me-1">
