--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -239,13 +239,21 @@
                 <InputNumber class="form-control no-spinners" TValue="float" @bind-Value="@CreateUpdateSetItemDto.SetItemPrice" />
             </div>
         </div>
+         <div class="row mt-2">
+            <div class="col-2">
+                <label>@L["SetGroupBuyPrice"]</label>
+            </div>
+            <div class="col-3">
+                <InputNumber class="form-control no-spinners" TValue="int?" @bind-Value="@CreateUpdateSetItemDto.GroupBuyPrice" />
+            </div>
+        </div>
 
         <div class="row mt-3">
             <div class="col-2">
                 <label>@L["CommodityAttributes"]</label>
             </div>
             <div class="col-10">
-                <div class="row">
+               @*  <div class="row">
                     <div class="col-3">
                         <label>@L["TimeLimitPeriod"]</label>
                     </div>
@@ -255,7 +263,7 @@
                     <div class="col-3">
                         <DateEdit @bind-Date="CreateUpdateSetItemDto.LimitAvaliableTimeEnd" Style="width:100%" Placeholder="@L["EndDate"].ToString()" TValue="DateTime" />
                     </div>
-                </div>
+                </div> *@
                 <div class="row mt-2">
                     <div class="col-3">
                         <label>@L["LimitQuantity"]</label>
