--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
@@ -251,7 +251,7 @@
                 <label>@L["CommodityAttributes"]</label>
             </div>
             <div class="col-10">
-                <div class="row">
+               @*  <div class="row">
                     <div class="col-3">
                         <label>@L["TimeLimitPeriod"]</label>
                     </div>
@@ -261,7 +261,7 @@
                     <div class="col-3">
                         <DateEdit @bind-Date="CreateUpdateSetItemDto.LimitAvaliableTimeEnd" Style="width:100%" Placeholder="@L["EndDate"].ToString()" TValue="DateTime" />
                     </div>
-                </div>
+                </div> *@
                 <div class="row mt-2">
                     <div class="col-3">
                         <label>@L["LimitQuantity"]</label>
